Fix spinner alignment

--- a/src/styles/antd.css
+++ b/src/styles/antd.css
@@ -8062,7 +8062,7 @@ html {
   transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .ant-btn > .ant-btn-loading-icon .anticon {
-  padding-right: 8px;
+  margin-right: 8px;
 }
 .ant-btn > .ant-btn-loading-icon:only-child .anticon {
   padding-right: 0;
